keycloak/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
          readOnly: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0.7
          args:
          - start
          - --proxy-headers
          - xforwarded
          - --hostname
          - https://keycloak.local.ongy.net
          - --http-enabled
          - "true"
          - --hostname-backchannel-dynamic
          - "true"
          volumeMounts:
          - name: keycloak-data
            mountPath: /opt/keycloak/data/h2
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ['ALL']
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            privileged: false
            runAsNonRoot: false
